Project, Experince and Education tiles are done for desktop mode but resposive is still under development

--- a/my-react-app/src/Education/Stickers/TFBookStickers.css
+++ b/my-react-app/src/Education/Stickers/TFBookStickers.css
@@ -1,3 +1,19 @@
 .top-left {
-    background-color: #9BD9BC;
+    position: absolute;
+    background-color: transparent;
+    top: -20px; /* Adjust vertical offset */
+  left: 0px; 
+  height: 100px;
+  width: 100px;
+}
+
+
+.img-container{
+    position: relative;
+    background-color: transparent; /* Match your background color */
+    padding: 40px;
+    text-align: center;
+    width: em;
+    border-radius: 10px; /* Ensure floating elements don't break layout */
+  
 }
