--- a/my-react-app/src/Education/Education.css
+++ b/my-react-app/src/Education/Education.css
@@ -1,7 +1,44 @@
 .education-container{
+    display: flex;
+    flex-direction: column;
     width: 312px;
     height:300px;
     background-color: #9BD9BC;
     margin-top: 12px;
-    border-radius: 4px;
+    border-radius: 6px;
+}
+
+.top-books-container{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    background-color: #9BD9BC;
+}
+
+
+.education-text{
+    font-size: 36px;
+    justify-content: center;
+    align-self: center;
+    background-color: #9BD9BC;
+    color: #FF82D6;
+    font-weight: 600;
+    margin-bottom: 2px;
+}
+
+
+.context{
+    align-self: center;
+    margin-top: 0px;
+    color: #32C17D;
+    font-size: 14px;
+    background-color: transparent;
+    font-weight: 600;
+}
+
+
+.bottom-book-container{
+    background-color: #9BD9BC;
+    align-self: center;
+    height: 40px;
 }
