--- a/my-react-app/src/Experince/experince.css
+++ b/my-react-app/src/Experince/experince.css
@@ -15,6 +15,7 @@
 .image{
     margin-top: 5px;
     height: 80px;
+    width: 80px;
     background-color: #42AF71;
 }
 
@@ -24,7 +25,7 @@
     display: inline;
     color: #CDFFEC  ;
     rotate: 270deg;
-    padding-top: 30px;
+    padding-top: 20px;
     padding-bottom: 30px;
     font-weight: 600;
     font-size: 40px;
