--- a/my-react-app/src/Project/Project.css
+++ b/my-react-app/src/Project/Project.css
@@ -15,6 +15,9 @@
 .image-container{
     display: flex;
     align-self: flex-start;
+    justify-content: flex-start;
+    background-color: transparent;
+
 }
 
 .qtext{
