--- a/my-react-app/src/Education/Education.css
+++ b/my-react-app/src/Education/Education.css
@@ -1,10 +1,9 @@
 .education-container{
     display: flex;
     flex-direction: column;
-    width: 312px;
+    min-width: 310px;
     height:300px;
     background-color: #9BD9BC;
-    margin-top: 12px;
     border-radius: 6px;
 }
 
