--- a/src/App.css
+++ b/src/App.css
@@ -1,79 +1,49 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
-  background-color: black;
+  background-color: transparent;
   font-family:"Poppins";
 }
 
-.container-is-the-main{
+
+.background-container-main{
+  width: 100vh;
+  height: 100vh;
+}
+
+.app-container{
   display: flex;
-  justify-content: center;
-  align-self: center;
-  box-sizing: border-box;
-  max-height: 100vh;
   
 }
-.main-container{
+
+.mobile-app-container{
   display: flex;
   justify-content: center;
-  flex-direction: row;
-  margin-top: 15px;
-  margin-left: 60px;
-  margin-right: 60px;
-  margin-bottom: 20px;
-  
-  max-height: 100%;
+  align-content: center;
+  width: 100% ;
+  height: 100%;
+  background: #000000;
+  --gap: 5em;
+  --line: 1px;
+  --color: rgba(255, 255, 255, 0.2);
+
+  background-image: linear-gradient(
+      -90deg,
+      transparent calc(var(--gap) - var(--line)),
+      var(--color) calc(var(--gap) - var(--line) + 1px),
+      var(--color) var(--gap)
+    ),
+    linear-gradient(
+      0deg,
+      transparent calc(var(--gap) - var(--line)),
+      var(--color) calc(var(--gap) - var(--line) + 1px),
+      var(--color) var(--gap)
+    );
+  background-size: var(--gap) var(--gap);
 }
 
-.sub-group1{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.sub-group-2{
-  display: flex;
-}
-
-.group3{
-  display: flex;
-  height: 380px;
-  flex-direction: column;
-  justify-content: center;
-  align-self: flex-start;
-}
-
-.group4{
-  display: flex;
-  flex-direction: row;
-}
-
-.group6{
-  width: 200px;
-  height: 200px;
-  background-color: aliceblue;
-}
-
-
-.main-group-of-4-and-5{
-  display: flex;
-  flex-direction: column;
-  overflow-x: visible;
-  width: 150px;
-  align-items: flex-end;
-  margin-left: 12px;
-}
-
-.group-pf-edu-achi-cert{
-  display: flex;
-  overflow: visible;
-  height: 300px;
-  width: 300px;
-
-  margin-top: 12px;
-}
-
-.group-of-achiv-and-certifi{
-  display: flex;
-  flex-direction: column;
+@media (max-width: 400px) {
+    .mobile-app-container{
+        
+    }
 }
