--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,14 @@
   line-height: 1.5;
   font-weight: 400;
   justify-content: center;
-
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  
+  
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #000000;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -32,6 +36,7 @@ body {
   justify-content: center;
   align-content: center;
   height: 100vh;
+  width: 100vw;
 }
 
 h1 {
