--- a/src/Mobile/MobComponents/Head/Head.css
+++ b/src/Mobile/MobComponents/Head/Head.css
@@ -1,6 +1,6 @@
 .head-mobile-main-container{
     /* width: 355px; */
-    height: 232px;
+    /* height: 232px; */
     display: flex;
 
     flex-direction: column;
@@ -8,9 +8,9 @@
     justify-content: space-between;
     height: 250px;
     width: 100%;
-    margin-top: 8px;
+    margin-top: 20rem;
     border-radius: 4px;
-    overflow: hidden;
+    
 
     
 }
