--- a/src/Mobile/Mobile.css
+++ b/src/Mobile/Mobile.css
@@ -4,8 +4,8 @@
     justify-content: center;
     width: 100vw;
     height: 100%;
-    margin: 0;
-  padding: 0;
+    margin: 0px;
+  padding: 0px;
     flex-direction: column;
     
     align-items: center;
