pushing corrections in css and clikcable

--- a/src/Desktop/Desktop.css
+++ b/src/Desktop/Desktop.css
@@ -9,7 +9,7 @@
   .desktop-main-container{
 width: 100%;
 
-    background: #000000;
+    /* background: #000000;
   --gap: 5em;
   --line: 1px;
   --color: rgba(255, 255, 255, 0.2);
@@ -26,7 +26,7 @@ width: 100%;
       var(--color) calc(var(--gap) - var(--line) + 1px),
       var(--color) var(--gap)
     );
-  background-size: var(--gap) var(--gap);
+  background-size: var(--gap) var(--gap); */
   }
   
   .container-is-the-main{
@@ -41,12 +41,12 @@ width: 100%;
     display: flex;
     justify-content: center;
     flex-direction: row;
-    margin-top: 15px;
+    /* margin-top: 15px;
     margin-left: 60px;
     margin-right: 60px;
-    margin-bottom: 20px;
+    margin-bottom: 20px; */
     
-    max-height: 100%;
+    max-height: 100vh;
   }
   
   .sub-group1{
