--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@
 
 .app-container{
   display: flex;
+  width: 100%;
+  height: 100%;
   
 }
 
@@ -20,9 +22,9 @@
   display: flex;
   justify-content: center;
   align-content: center;
-  width: 100% ;
-  height: 100%;
-  background: #000000;
+  width: 100vh ;
+  height: 100vh;
+  /* background: #000000;
   --gap: 5em;
   --line: 1px;
   --color: rgba(255, 255, 255, 0.2);
@@ -39,7 +41,7 @@
       var(--color) calc(var(--gap) - var(--line) + 1px),
       var(--color) var(--gap)
     );
-  background-size: var(--gap) var(--gap);
+  background-size: var(--gap) var(--gap); */
 }
 
 @media (max-width: 400px) {
