--- a/src/Education/Stickers/TopRightSticker.css
+++ b/src/Education/Stickers/TopRightSticker.css
@@ -2,6 +2,7 @@
     
     height: fit-content;
     width: fit-content;
+    border-radius: 4px;
 }
 
 
@@ -12,5 +13,6 @@
     height: 80px;
     width: 100px;
   background-color: transparent;
+  border-radius: 4px;
 
 }
