--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,24 @@
   
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #000000;
+  background: #000000;
+  --gap: 5em;
+  --line: 1px;
+  --color: rgba(255, 255, 255, 0.2);
+
+  background-image: linear-gradient(
+      -90deg,
+      transparent calc(var(--gap) - var(--line)),
+      var(--color) calc(var(--gap) - var(--line) + 1px),
+      var(--color) var(--gap)
+    ),
+    linear-gradient(
+      0deg,
+      transparent calc(var(--gap) - var(--line)),
+      var(--color) calc(var(--gap) - var(--line) + 1px),
+      var(--color) var(--gap)
+    );
+  background-size: var(--gap) var(--gap);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -36,7 +53,7 @@ body {
   justify-content: center;
   align-content: center;
   height: 100vh;
-  width: 100vw;
+  min-width: 100vw;
 }
 
 h1 {
