--- a/src/App.css
+++ b/src/App.css
@@ -13,16 +13,19 @@
 
 .app-container{
   display: flex;
+  width: 100%;
+  height: 100%;
   
 }
 
 .mobile-app-container{
   display: flex;
   justify-content: center;
+  justify-self: center;
   align-content: center;
-  width: 100% ;
+  max-width:max-content ;
   height: 100%;
-  background: #000000;
+  /* background: #000000;
   --gap: 5em;
   --line: 1px;
   --color: rgba(255, 255, 255, 0.2);
@@ -39,11 +42,12 @@
       var(--color) calc(var(--gap) - var(--line) + 1px),
       var(--color) var(--gap)
     );
-  background-size: var(--gap) var(--gap);
+  background-size: var(--gap) var(--gap); */
 }
 
 @media (max-width: 400px) {
     .mobile-app-container{
-        
+
+        display: flex;
     }
 }
