--- a/src/Mobile/Mobile.css
+++ b/src/Mobile/Mobile.css
@@ -2,13 +2,14 @@
 .mobile-main-container{
     display: flex;
     justify-content: center;
-    width: 100vw;
+    align-items: center;
+    width: 100%;
     height: 100%;
     margin: 0px;
   padding: 0px;
     flex-direction: column;
     
-    align-items: center;
+    
     
 
   
