--- a/src/Mobile/SubContent/SubContentMobile.css
+++ b/src/Mobile/SubContent/SubContentMobile.css
@@ -1,18 +1,19 @@
 .mobile-subcontent-overlay{
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
+    flex-wrap:  wrap;
     justify-content: center;
     align-self: center;
-    position: absolute;
+    /* position: absolute; */
+    position:fixed;
     width: 80%;
     margin-top: auto;
     height: 85%;
-/* From https://css.glass */
-background: rgba(0, 0, 0, 0.3);
-border-radius: 20px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(8.7px);
--webkit-backdrop-filter: blur(8.7px);
-border: 1px solid rgba(0, 0, 0, 0.15);
+    /* From https://css.glass */
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8.7px);
+    -webkit-backdrop-filter: blur(8.7px);
+    border: 1px solid rgba(0, 0, 0, 0.15);
 }
